tests/snapshots/integration__integration_tests__config_show__opencode_install_uses_dirs_fallback.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - opencode
    - install
    - "--yes"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_BRANCH_ICON: ""
    GIT_DIR_ICON: ""
    GIT_REMOTE_BRANCH_ICON: ""
    GIT_WORKTREE_ICON: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    NO_COLOR: ""
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[32m✓[39m [32mPlugin installed @ [1m~/.config/opencode/plugins/worktrunk.ts[22m[39m
[2m↳[22m [2mActivity markers (🤖/💬) will appear in [4mwt list[24m[22m
